# mcp-ibge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  data_source_request.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  client_setup.md  community_issues.md  contributing.md  data_sources.md  docker.md  evals.md  examples.md  getting-started.md  index.md  installation.md  release.md  roadmap.md  security.md  tools.md
docs/assets/: README.md
docs/clients/: claude-desktop.md  cursor.md  open-webui.md
docs/examples/: compare-municipalities.md  education-activity.md  municipal-profile.md
docs/modules/: bcb.md  dados-gov-br.md  ibge.md  inep.md  rio.md  saude.md  sidra.md  tesouro.md  transparencia.md
docs/tools/: agregados.md  geospatial.md  localidades.md
evals/: README.md  example_results.json  metrics.py  runner.py
evals/datasets/: ambiguity_cases.json  localidades_basic.json  sidra_basic.json
evals/reports/: example_report.html
examples/: README.md  claude_desktop_config.json  cursor_config.json  queries.md
examples/agent_recipes/: README.md  mcp_ibge_queries.md
examples/agent_recipes/compare_municipalities/: README.md  example_output.md  expected_tools.md  prompt.md
examples/agent_recipes/education_activity/: README.md  example_output.md  expected_tools.md  prompt.md
examples/agent_recipes/find-public-datasets/: README.md  example_output.md  expected_tools.md  prompt.md
examples/agent_recipes/municipal_profile/: README.md  example_output.md  expected_tools.md  prompt.md
examples/agent_recipes/public_policy_brief/: README.md  example_output.md  expected_tools.md  prompt.md
examples/agent_recipes/sidra_query_discovery/: README.md  example_output.md  expected_tools.md  prompt.md
examples/claude_desktop/: mcp_ibge.json
examples/cursor/: mcp_ibge.json
examples/open_webui/: README.md  mcpo_config.json
scripts/: generate_demo_gif.py
src/mcp_ibge/: __init__.py  __main__.py  cache.py  config.py  envelope.py  errors.py  http_client.py  server.py
src/mcp_ibge/clients/: __init__.py  agregados.py  base.py  localidades.py  populacao.py
src/mcp_ibge/schemas/: agregados.py  common.py  localidades.py
src/mcp_ibge/services/: agregados_service.py  localidades_service.py
src/mcp_ibge/tools/: __init__.py  agregados_tools.py  localidades_tools.py
src/mcp_ibge/utils/: cache.py  errors.py
tests/: conftest.py  test_agregados.py  test_agregados_client.py  test_agregados_service.py  test_cache.py  test_errors.py  test_http_client.py  test_localidades.py  test_localidades_client.py  test_localidades_service.py  test_populacao.py  test_server.py  test_server_tools.py  test_tools_contracts.py
