[project]
name = "mcp-data-br"
version = "0.1.0"
description = "mcp-data-br: a collection of Model Context Protocol (MCP) servers for Brazilian public data (IBGE, SIDRA and more)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mcp-data-br contributors" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ibge",
    "brazil",
    "open-data",
    "public-data",
    "sidra",
]

# This root project is a virtual workspace root (see [tool.uv]): it is not
# built or published itself. Its `dependencies` make `uv sync` install every
# workspace member (and their entry points, e.g. `mcp-ibge`) into a single
# shared environment, so `uv run mcp-ibge` works from the repository root.
dependencies = ["mcp-ibge"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/FilipePessoa30/mcp-ibge"
Issues = "https://github.com/FilipePessoa30/mcp-ibge/issues"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
mcp-ibge = { workspace = true }
