[project]
name = "mcp-data-br"
version = "0.1.0"
description = "mcp-data-br: a collection of Model Context Protocol (MCP) servers for Brazilian public data (IBGE, SIDRA and more)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mcp-data-br contributors" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ibge",
    "brazil",
    "open-data",
    "public-data",
    "sidra",
]

# This root project is a virtual workspace root (see [tool.uv]): it is not
# built or published itself. Its `dependencies` make `uv sync` install every
# workspace member (and their entry points, e.g. `mcp-ibge`) into a single
# shared environment, so `uv run mcp-ibge` works from the repository root.
# `mcp-inep`, `mcp-dados-gov-br`, `mcp-bcb`, `mcp-rio`, `mcp-saude`,
# `mcp-transparencia` and `mcp-tesouro` are planning-stage scaffolds (only a
# `status` tool, see docs/modules/<slug>.md) — included here so they're part
# of the same workspace lock/sync as every other module.
dependencies = [
    "mcp-ibge",
    "mcp-inep",
    "mcp-dados-gov-br",
    "mcp-bcb",
    "mcp-rio",
    "mcp-saude",
    "mcp-transparencia",
    "mcp-tesouro",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/FilipePessoa30/mcp-data-br"
Issues = "https://github.com/FilipePessoa30/mcp-data-br/issues"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
mcp-ibge = { workspace = true }
mcp-inep = { workspace = true }
mcp-dados-gov-br = { workspace = true }
mcp-bcb = { workspace = true }
mcp-rio = { workspace = true }
mcp-saude = { workspace = true }
mcp-transparencia = { workspace = true }
mcp-tesouro = { workspace = true }
